# yt_clipper

./: .bumpit.yaml  .editorconfig  .flake8  .gitattributes  .gitignore  .prettierrc  .pylintrc  .tool-versions  .versionrc.json  Justfile  LICENSE  changelog-old-2023-08-12.md  changelog-pre-version-unification.md  changelog.md  eslint.config.mjs  eslint.config.ts  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  quickstart.md  readme.MD  readme.md  renovate.json  ruff.toml  tsconfig.jest.json  tsconfig.json
.github/: contributing.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pr.yml  static.yml  yt_clipper_CI.yml  yt_clipper_ci.yml
.parcel-globals/: chart.js.js  dompurify.js  jszip.js
.sandbox/: twitter.css  vidstack.js
bindeps/mac/ffmpeg/: README.txt  ffmpeg  ffplay  ffprobe  libavcodec.58.dylib  libavdevice.58.dylib  libavfilter.7.dylib  libavformat.58.dylib  libavutil.56.dylib  libpostproc.55.dylib  libswresample.3.dylib  libswscale.5.dylib
bindeps/win/ffmpeg/: README.txt
eslint-rules/: no-url-attribute-interpolation.test.ts  no-url-attribute-interpolation.ts
site/: index.html
src/: chart.js-drag-data-plugin.js  speed-chart-spec.ts  util.ts  yt_clipper.py  yt_clipper.ts
src/@types/: custom.d.ts  yt_clipper.d.ts
src/clipper/: argparser.py  argparser_suggestions.py  clip_maker.py  clipper_types.py  ffmpeg_codec.py  ffmpeg_filter.py  ffmpeg_version.py  ffprobe.py  pix_fmt_bit_depth.py  platforms.py  requirements.dev.txt  requirements.txt  util.py  version.py  video2x.py  yt_clipper.py  ytc_logger.py  ytc_settings.py  ytdl.py  ytdl_importer.py
src/clipper/docs/: ffmpeg-notes.md
src/clipper/encode_crf_search/: __init__.py  curve_fit.py  orchestrator.py  predicates.py  search.py  types.py
src/clipper/include/: default_args.txt
src/clipper/log_helpers/: __init__.py  encode_progress.py  paths.py  rules.py  settings_dump.py  subprocess_block.py  tables.py  timing.py
src/clipper/mac_helpers/: yt_clipper_auto  yt_clipper_auto_download  yt_clipper_auto_interpolate  yt_clipper_input_video  yt_clipper_options  yt_clipper_preview
src/clipper/macos_helpers/: fast_trim  merge  preprocess_hevc  vid2gif  yt_clipper_auto  yt_clipper_input_video  yt_clipper_options  yt_clipper_preview
src/clipper/previews/: __init__.py  avif.py  dispatcher.py  shared.py  webp.py
src/command-palette/: hotkey-engine.test.ts  hotkey-engine.ts  index.ts  palette-ui.test.ts  palette-ui.ts  palette.css.ts  registry.test.ts  registry.ts  static-table.test.ts  static-table.ts  types.ts
src/markup/: appState.ts  auto-save.ts  bootstrap.ts  charts.ts  crop-overlay.ts  crop-utils.test.ts  crop-utils.ts  crop.ts  css.ts  feature-flags.ts  frame-capture.test.ts  frame-capture.ts  global-settings-editor.ts  marker-settings-editor.ts  markers.ts  misc.ts  navigation.ts  preview-toggles.ts  save-load.ts  settings-editor.ts  shortcut-definitions.ts  speed.test.ts  speed.ts  tooltips.ts  util.ts  video-rotation.ts  yt-blockers.ts  yt_clipper.ts
(+153 files in other folders)
