[tool.poetry]
name = "clipper"
version = "5.24.0"
description = "Quickly generate clipped webms."
authors = ["exwm <rjvgb@protonmail.com>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.scripts]
yt_clipper = 'clipper.yt_clipper:main'

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
yt-dlp = "2024.9.27"
youtube-dl = "2021.12.17"
coloredlogs = "^15.0.1"
notify-py = "^0.3.3"
verboselogs = "^1.7"
webvtt-py = "^0.4.6"
certifi = ">=2024.7.4"

[tool.poetry.group.dev.dependencies]
pyinstaller = "6.9.0"
bumpit = "^0.8.0"
ruff = "0.6.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
syrupy = "^4.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = "src/clipper/tests"
pythonpath = "src"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

