[project]
name = "clipper"
version = "5.34.0"
description = "Quickly generate clipped webms."
authors = [{ name = "exwm", email = "rjvgb@protonmail.com" }]
requires-python = ">=3.9,<3.13"
readme = "readme.md"
license = "MIT"
dependencies = [
    "yt-dlp==2025.8.11",
    "coloredlogs>=15.0.1,<16",
    "notify-py>=0.3.3,<0.4",
    "verboselogs~=1.7",
    "webvtt-py>=0.4.6,<0.5",
    "certifi>=2024.7.4",
    "rich>=13.9.1,<14",
    "rich-argparse>=1.5.2,<2",
]

[project.scripts]
yt_clipper = "clipper.yt_clipper:main"

[dependency-groups]
dev = [
    "pyinstaller==6.9.0",
    "bumpit>=0.8.0,<0.9",
    "ruff==0.6.8",
    "pillow>=10.4.0,<11",
]
test = [
    "pytest>=8.3.3,<9",
    "pytest-cov>=5.0.0,<6",
    "syrupy>=4.7.1,<5",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = "src/clipper/tests"
pythonpath = "src"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

